--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <label for="number-of-people">Number of People</label>
         <input id="number-of-people" name="number-of-people" placeholder="0" min="0" type="number" step="1"/>
       </section>
-      <section>
+      <section class="results-section flex">
         <h2 class="sr-only">Results section</h2>
         <dl>
           <div>
@@ -53,7 +53,7 @@
             <dd>$32.25</dd>
           </div>
         </dl>
-        <button type="reset">Reset</button>
+        <button class="reset-btn" type="reset">Reset</button>
       </section>
     </form>
   </main>
