--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 </head>
 <body>
   <main>
-    <img src="./images/logo.svg" alt="Tip calculator logo">
-    <form class="form-container">
+    <div class="tip-calculator-logo flex">
+      <img src="./images/logo.svg" alt="Tip calculator logo">
+    </div>
+    <form class="form-container flex">
       <section class="bil-section flex">
         <label for="bill">Bill</label>
-        <input id="bill" name="bill" placeholder="0" min="0" type="number" step="0.01"/>
+        <input id="bill" class="bill-input" name="bill" placeholder="0" min="0" type="number" step="0.01"/>
       </section>
       <section class="tip-section flex">
         <h2 class="sr-only">Tip selection</h2>
@@ -32,28 +34,28 @@
       </section>
       <section class="number-of-people-section flex">
         <label for="number-of-people">Number of People</label>
-        <input id="number-of-people" name="number-of-people" placeholder="0" min="0" type="number" step="1"/>
+        <input id="number-of-people" class="number-of-people-input" name="number-of-people" placeholder="0" min="0" type="number" step="1"/>
       </section>
       <section class="results-section flex">
         <h2 class="sr-only">Results section</h2>
-        <dl>
-          <div>
-            <div>
+        <dl class="results-list flex">
+          <div class="results-tip-section flex">
+            <div class="results-data flex">
               <dt>Tip Amount</dt>
-              <dd>/ per person</dd>
+              <dd class="per-person-dd">/ per person</dd>
             </div>
-            <dd>$4.25</dd>
+            <dd class="tip-dd">$4.25</dd>
           </div>
 
-          <div>
-            <div>
+          <div class="results-total-section flex">
+            <div class="results-data flex">
               <dt>Total</dt>
-              <dd>/ per person</dd>
+              <dd class="per-person-dd">/ per person</dd>
             </div>
-            <dd>$32.25</dd>
+            <dd class="total-dd">$32.25</dd>
           </div>
         </dl>
-        <button class="reset-btn" type="reset">Reset</button>
+        <button class="reset-btn uppercase" type="button">Reset</button>
       </section>
     </form>
   </main>
