--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <dt>Tip Amount</dt>
               <dd class="per-person-dd">/ per person</dd>
             </div>
-            <dd>$<span class="tip-dd tip-amount-js"></span>
+            <dd class="tip-dd">$<span class="tip-amount-js"></span>
             </dd>
           </div>
 
@@ -53,7 +53,7 @@
               <dt>Total</dt>
               <dd class="per-person-dd">/ per person</dd>
             </div>
-            <dd>$<span class="total-dd total-js"></span></dd>
+            <dd class="total-dd">$<span class="total-js"></span></dd>
           </div>
         </dl>
         <button class="reset-btn uppercase reset-btn-js" type="button">Reset</button>
