--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </section>
       <section class="number-of-people-section flex">
         <label for="number-of-people">Number of People</label>
-        <input id="number-of-people" class="number-of-people-input umber-of-people-js" name="number-of-people" placeholder="0" min="0" type="number" step="1"/>
+        <input id="number-of-people" class="number-of-people-input number-of-people-js" name="number-of-people" placeholder="0" min="0" type="number" step="1"/>
       </section>
       <section class="results-section flex">
         <h2 class="sr-only">Results section</h2>
