--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
     </div>
     <form class="form-container flex">
       <section class="bil-section flex">
-        <label for="bill">Bill</label>
+        <label for="bill" class="labels flex">
+          <span>Bill</span>
+          <span class="error-msg bill-error-msg-js" hidden></span>
+        </label>
         <input id="bill" class="bill-input bill-js" name="bill" placeholder="0" min="0" type="number" step="0.01"/>
       </section>
       <section class="tip-section flex">
         <h2 class="sr-only">Tip selection</h2>
-        <label for="tip">Select Tip %</label>
+        <label for="tip" class="labels flex">
+          <span>Select Tip %</span>
+          <span class="error-msg tip-error-msg-js" hidden></span>
+        </label>
         <div class="tip-choice-section" role="radiogroup">
           <button class="tip-btn tip-btn-js" type="button" role="radio" aria-checked="false" data-value="5">5%</button>
           <button class="tip-btn tip-btn-js" type="button" role="radio" aria-checked="false" data-value="10">10%</button>
@@ -33,7 +39,10 @@
         </div>
       </section>
       <section class="number-of-people-section flex">
-        <label for="number-of-people">Number of People</label>
+        <label for="number-of-people" class="labels flex">
+          <span>Number of People</span>
+          <span class="error-msg people-error-msg-js" hidden></span>
+        </label>
         <input id="number-of-people" class="number-of-people-input number-of-people-js" name="number-of-people" placeholder="0" min="0" type="number" step="1"/>
       </section>
       <section class="results-section flex">
