Add hover effects and hidden button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img src="./images/logo.svg" alt="Tip calculator logo">
     </div>
     <form class="form-container flex">
-      <section class="bil-section flex">
+      <section class="bill-section flex">
         <label for="bill" class="labels flex">
           <span>Bill</span>
           <span class="error-msg bill-error-msg-js" hidden></span>
@@ -65,7 +65,7 @@
             <dd class="total-dd">$<span class="total-js"></span></dd>
           </div>
         </dl>
-        <button class="reset-btn uppercase reset-btn-js" type="button">Reset</button>
+        <button class="reset-btn uppercase reset-btn-js" type="button" disabled>Reset</button>
       </section>
     </form>
   </main>
